<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_subdirectory_arrow_right_24"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/bar_graph"
            android:icon="@drawable/ic_baseline_insert_chart_outlined_24"
            android:title="@string/menu_graph" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_gallery" />

    </group>
</menu>