<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A90E2"
    tools:context=".ui.home.monthFragment">

    <Button
        android:id="@+id/buttonToday"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:minWidth="10dip"
        android:minHeight="27dp"
        android:text="@string/today"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonWeek"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonYear"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:minWidth="10dip"
        android:minHeight="27dp"
        android:text="@string/year"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonMonth"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonWeek"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:minWidth="10dip"
        android:minHeight="27dp"
        android:text="@string/week"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonMonth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonToday"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMonth"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat"
        android:minWidth="10dip"
        android:minHeight="27dp"
        android:text="@string/month"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonYear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonWeek"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="20dp"
        android:layout_height="2dp"
        android:background="@drawable/yellow_tab_dash"
        app:layout_constraintEnd_toEndOf="@+id/buttonMonth"
        app:layout_constraintStart_toStartOf="@+id/buttonMonth"
        app:layout_constraintTop_toBottomOf="@+id/buttonMonth" />

  <!--  <ImageView
        android:id="@+id/imageView_PlusSign"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/r_4_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonYear" />-->

   <!-- <ImageView
        android:id="@+id/imageView_tabSign"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/l_4_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonToday" />-->

    <Button
        android:id="@+id/labeltodayButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat"
        android:minWidth="10dip"
        android:minHeight="27dp"
        android:text="Now"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="375dp"
        android:layout_height="267dp"
        android:src="@drawable/graph_month"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="375dp"
        android:layout_height="267dp"
        android:src="@drawable/graph_month_2"
        app:layout_constraintBottom_toTopOf="@+id/labeltodayButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>