<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4A90E2"
    tools:context=".MainActivity"


    >


    <TextView
        android:id="@+id/textlogo"
        android:layout_width="329dp"
        android:layout_height="88dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="566dp"
        android:background="#4A90E2"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="12sp"
        android:text="@string/textlogo"
        android:textColor="#090808"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="122dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_3339" />

    <ImageButton
        android:id="@+id/GetStarted"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="245dp"
        android:background="#4A90E2"
        android:onClick="callIntent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/button" />

    <TextView
        android:id="@+id/accounttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="171dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="4sp"
        android:text="@string/accounttext"
        android:textColor="#090808"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="265dp"
        android:layout_marginTop="533dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="171dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="4sp"
        android:onClick="callIntent"
        android:text="@string/signuptext"
        android:textColor="#090808"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Signinmain"
        android:layout_width="134dp"
        android:layout_height="64dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="505dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="277dp"
        android:text="Sign In"
        android:textAlignment="center"
        android:textColor="#090808"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>